--- a/css/index.css
+++ b/css/index.css
@@ -6,3 +6,4 @@
 @import url("./Visualizer.css");
 @import url("./AudDTokenAlert.css");
 @import url("./Ellipses.css");
+@import url("./EditableField.css");
